# AI-Prompt-Firewall

./: README.md
ai-prompt-firewall/: MANIFEST.in  config.py  models.py  pyproject.toml
ai-prompt-firewall/ai_prompt_firewall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-prompt-firewall/api/: server.py
ai-prompt-firewall/audit_logging/: audit_logger.py
ai-prompt-firewall/dashboard/: index.html
ai-prompt-firewall/data/: audit.db
ai-prompt-firewall/data/attacks/: red_team_dataset.json  red_team_report.json
ai-prompt-firewall/data/threats/: threat_vectors.json
ai-prompt-firewall/detection/pii/: pii_detector.py
ai-prompt-firewall/detection/semantic/: semantic_detector.py
ai-prompt-firewall/docs/: THREAT_MODEL.md  architecture.mermaid
ai-prompt-firewall/engine/: rule_engine.py
ai-prompt-firewall/engine/rules/: default_rules.yaml
ai-prompt-firewall/scripts/: red_team_runner.py  setup.sh
ai-prompt-firewall/tests/: test_api.py  test_detectors.py
